--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                         <span class="form__error">e-mail в формате: students-yandex@yandex.ru</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="text" name="tel" placeholder="Телефон" pattern="\+7\s?[\(]{0,1}9[0-9]{2}[\){0,1}\s?\d{3}[-]{0,1}\d{2}[-]{0,1}\d{2}" minlength="" maxlength="18"  required/>
+                        <input class="form__input" type="text" name="tel" placeholder="Телефон" pattern="\(+7)|(8)\s?[\(]{0,1}9[0-9]{2}[\)][-]{0,1}\s?\d{3}[-]{0,1}\d{2}[-]{0,1}\d{2}" minlength="" maxlength="18"  required/>
                         <span class="form__error">Недопустимый формат номера</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="text" name="url" pattern="\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}" placeholder="Ваш сайт" required/>
+                        <input class="form__input" type="text" name="url" pattern="\(https)|(http)\:\/\/www\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}" placeholder="Ваш сайт" required/>
                         <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
                     <button class="form__button" type="text">Отправить</button>
