--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <span class="form__error">Недопустимый формат номера</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="text" name="url" pattern="(https://([w]{3}\.)?[a-z0-9-]+\.[a-z]{2,4}|http://([w]{3}\.)?[a-z0-9-]+\.[a-z]{2,4}|([0-255]{1,3}[\.]){3}[0-255]{1,3}(:[0-9]{5})?)" placeholder="Ваш сайт" required/>
+                        <input class="form__input" type="text" name="url" pattern="(https://([w]{3}\.)?[a-z0-9-]+\.[a-z]{2,4}|http://([w]{3}\.)?[a-z0-9-]+\.[a-z]{2,4}|(^\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}$)(:[0-9]{5})?)" placeholder="Ваш сайт" required/>
                         <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
                     <button class="form__button" type="text">Отправить</button>
