--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <h3>Форма регистрации</h3>
                 <fieldset class="form__fieldset">
                     <div class="form__field">
-                        <input class="form__input" type="text" name="name" pattern="^[А-ЯЁ]{1}[а-яё]+([-][А-ЯЁ][а-яё])?$" minlength="2" maxlength="30" placeholder="Имя" required />
+                        <input class="form__input" type="text" name="name" pattern="^[А-ЯЁ]{1}[а-яё]+([-][А-ЯЁ][а-яё]*)?$" minlength="2" maxlength="30" placeholder="Имя" required />
                     </div>
                     <div class="form__field">
                         <input class="form__input" type="text" name="email" pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" placeholder="E-Mail" required />
